--- a/src/main/resources/templates/member/cart.html
+++ b/src/main/resources/templates/member/cart.html
@@ -22,6 +22,7 @@
             <table class="cartTable">
                 <thead>
                 <tr>
+                    <th scope="col">번호</th>
                     <th scope="col">상품ID</th>
                     <th scope="col">상품이미지</th>
                     <th scope="col">상품명</th>
@@ -34,6 +35,7 @@
                 </thead>
                 <tbody>
                 <tr th:each="cartItem, i: ${cartItems}">
+                    <td th:text="${i.count}">장바구니상품 번호</td>
                     <td th:text="${cartItem.getProduct().getId()}">상품ID</td>
                     <td>
                         <th:block th:each="img : ${productImages}">
