--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -14,6 +14,7 @@
     <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script> <!-- 카카오 주소 api -->
     <script th:src="@{/js/member/addressApi.js}" defer="defer"></script> <!-- 카카오 주소 api -->
     <script th:src="@{/js/member/join_email.js}" defer="defer"></script>
+    <script th:src="@{/js/member/join_validation.js}" defer="defer"></script> <!-- 이메일아이디, 이름, 닉네임, 휴대전화번호 유효성 검사 -->
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
@@ -46,6 +47,8 @@
                             </div>
                         </li>
                         <p th:if="${#fields.hasErrors('memberEmail')}" th:errors="*{memberEmail}" class="error"></p>
+                        <span id="emailIdErrorMessage" style="color: red;"></span> <!-- 이메일 아이디 유효성 검사 오류 메시지를 표시할 영역 -->
+
                         <!-- 인증번호 입력란 -->
                         <li>
                             <div class="code">
@@ -84,7 +87,7 @@
                             <input type="text" th:field="*{memberName}" required="required" placeholder="한글과 영문만 입력 가능합니다" class="box">
                         </li>
                         <p th:if="${#fields.hasErrors('memberName')}" th:errors="*{memberName}" class="error"></p>
-                        
+                        <span id="memberNameErrorMessage" style="color: red;"></span> <!-- 이름 유효성 검사 오류 메시지를 표시할 영역 -->
                         <!-- 닉네임 -->
                         <li>
                             <div class="nickName">
@@ -95,6 +98,7 @@
                             </div>
                         </li>
                         <p th:if="${#fields.hasErrors('memberNickName')}" th:errors="*{memberNickName}" class="error"></p>
+                        <span id="memberNickNameErrorMessage" style="color: red;"></span> <!-- 닉네임 유효성 검사 오류 메시지를 표시할 영역 -->
                         <!-- 중복 확인 결과 메시지 영역 -->
                         <li>
                             <d id="nickNameAvailable" class="valid-feedback" style="display: none;"></d>
@@ -111,6 +115,7 @@
                             </div>
                         </li>
                         <p th:if="${#fields.hasErrors('memberPhone')}" th:errors="*{memberPhone}" class="error"></p>
+                        <span id="memberPhoneErrorMessage" style="color: red;"></span> <!-- 휴대전화번호 유효성 검사 오류 메시지를 표시할 영역 -->
                         <!-- 중복 확인 결과 메시지 영역 -->
                         <li>
                             <d id="phoneAvailable" class="valid-feedback" style="display: none;"></d>
