--- a/src/main/resources/templates/product/write.html
+++ b/src/main/resources/templates/product/write.html
@@ -12,6 +12,22 @@
 <div class="container">
   <form action="/product/write" id="product-form" method="post" enctype="multipart/form-data">
 
+        <!-- 송원철 -->
+        <span th:if="${false}" th:text="${member.memberId}"></span> <!-- th:if="${false}" 입력 시 안보이게 처리 -->
+        <script th:inline="javascript">
+            /* Thymeleaf에서 memberId를 JavaScript 변수로 가져옵니다. */
+            var memberId = /*[[${member?.memberId}]]*/ null;
+
+            /* memberId가 null이 아닌 경우에만 console에 출력합니다. */
+            if (memberId !== null) {
+                console.log('MemberId:', memberId);
+            }else {
+                console.log('MemberId: null');
+            }
+        </script>
+        <!----------->
+
+
     <div class="grid-wrapper">
 
       <div class="gridWrapper-prev-drop">
@@ -32,27 +48,15 @@
           </div>
         </div>
 
-        <!-- 송원철 -->
-        <span th:if="${false}" th:text="${member.memberId}"></span> <!-- th:if="${false}" 입력 시 안보이게 처리 -->
-        <script th:inline="javascript">
-            /* Thymeleaf에서 memberId를 JavaScript 변수로 가져옵니다. */
-            var memberId = /*[[${member?.memberId}]]*/ null;
-
-            /* memberId가 null이 아닌 경우에만 console에 출력합니다. */
-            if (memberId !== null) {
-                console.log('MemberId:', memberId);
-            }else {
-                console.log('MemberId: null');
-            }
-        </script>
-        <!----------->
-
       </div>
 
       <div class="grid-productBrandName">
         <label for="productBrandName" class="productInput-label"><span>* </span>브랜드명</label>
         <div class="productInputs-class">
-          <input type="text" name="productBrandName" class="productInputs" id="productBrandName" placeholder="브랜드명을 입력해주세요.">
+          <input type="text" name="productBrandName" class="productInputs" id="productBrandName" placeholder="브랜드명을 입력해주세요." autocomplete="off">
+        </div>
+        <div id="autocomplete-list" class="--displayFalse">
+          <ul id="autocomplete-text-ul" class="autocomplete-text-ul"></ul>
         </div>
       </div>
 
@@ -128,6 +132,7 @@
         </div>
       </div>
     </div>
+
   </form>
 </div>
 </body>
