--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -12,7 +12,7 @@
     <div class="join">
         <div class="join-con">
             <div class="title">
-                <h1>회원가입</h1>
+                <h1>회원가입<img th:src="@{/images/join.png}" alt="join"></h1>
             </div>
             <div class="button">
                 <!-- 일반 회원가입 버튼 -->
