--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -31,6 +31,13 @@
     justify-content: center;
     border-bottom: 2px solid #7285d3a4;
 }
+.container .join .join-con .title h1 img{
+    padding-top: 15px;
+    width: 40px;
+    height: inherit;
+    display: inline-block;
+    align-items: center;
+}
 /* button */
 .container .join .join-con .button{
     gap: 10px;
