--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -11,7 +11,7 @@
     <div class="List-con">
         <div class="List-title">
             <div class="title">
-                <h1>공지사항</h1>
+                <h1>공지사항 <img th:src="@{/images/notice.png}" alt="notice"></h1>
             </div>
         </div>
         <div class="search">
