--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -5,10 +5,27 @@
 <head>
   <meta charset="UTF-8">
   <title>detail</title>
+  <style>
+    /* 미리보기 이미지 스타일 */
+    #image-preview {
+      max-width: 100px;
+      max-height: 100px;
+      border: 1px solid #ccc;
+    }
+  </style>
 </head>
 <body>
 <div class="detail">
   <h1 class="title"><span th:text="${member.memberNickName}" ></span>님 상세정보</h1>
+
+  <!-- 이미지 미리보기 영역 -->
+  <div id="image-preview"><img id="preview-image" th:src="${memberImageUrl}" alt="프로필 이미지" style="width: 100px; height: 100px;"></div>
+  <!-- 버튼을 클릭하면 /image/upload로 POST 요청 보내기 -->
+  <form method="post" action="/image/upload" enctype="multipart/form-data">
+    <input type="file" name="file" id="file-input"> <!-- 파일 업로드 필드 -->
+    <button type="submit">이미지 업로드</button>
+  </form>
+
   <span th:if="${false}" th:text="${member.memberId}"></span> <br> <!-- th:if="${false}" 입력 시 안보이게 처리 -->
   <span th:if="${false}" :text="${member.memberPassword}"></span> <br>
   이메일 : <span th:text="${member.memberEmail}"></span> <br>
@@ -27,18 +44,40 @@
   <a th:href="@{/member/confirmEmail/{memberId}(memberId=${member.memberId})}">삭제</a>
 </div>
 <script>
-  // 생년월일 유효성 검사 함수
-  function validateBirth() {
-      var birth = document.getElementById('memberBirthSpan').textContent;
+  // 파일 선택 시 이미지 미리보기 함수
+ document.getElementById('file-input').addEventListener('change', function() {
+   var preview = document.getElementById('image-preview');
+   var file = this.files[0];
+   var reader = new FileReader();
 
-      if (!/^[0-9]{8}$/.test(birth)) {
-          document.getElementById('birthErrorMessage').textContent = "올바른 형식으로 입력해주세요 (8자리 숫자)";
-      } else {
-          document.getElementById('birthErrorMessage').textContent = "";
-      }
-  }
-  // 페이지 로드 시 유효성 검사 수행
-  window.onload = validateBirth;
+   reader.onload = function(e) {
+     // 이전 이미지 삭제
+     while (preview.firstChild) {
+       preview.removeChild(preview.firstChild);
+     }
+
+     var img = new Image();
+     img.src = e.target.result;
+     img.style.maxWidth = '100%';
+     img.style.maxHeight = '100%';
+     preview.appendChild(img);
+   };
+
+   reader.readAsDataURL(file);
+ });
+
+ // 생년월일 유효성 검사 함수
+ function validateBirth() {
+     var birth = document.getElementById('memberBirthSpan').textContent;
+
+     if (!/^[0-9]{8}$/.test(birth)) {
+         document.getElementById('birthErrorMessage').textContent = "올바른 형식으로 입력해주세요 (8자리 숫자)";
+     } else {
+         document.getElementById('birthErrorMessage').textContent = "";
+     }
+ }
+ // 페이지 로드 시 유효성 검사 수행
+ window.onload = validateBirth;
 </script>
 </body>
 </html>
