--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -21,6 +21,7 @@
     justify-content: center;
     text-align: center;
     gap: 50px;
+    /* background-color: #FFF2F2; */
 }
 /* 제목 */
 .container .join .join-con .title{
@@ -74,7 +75,8 @@
     border-left: 30px solid #7285d3;
     border-bottom: 1px solid #7285d3;
     transition: all 0.3s;
-    background: transparent;
+    /* background: transparent; */
+    background-color: white;
     box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
 }
 .container .join .join-con .button .jBtn:hover{
@@ -106,7 +108,8 @@
     border-left: 30px solid #7285d3;
     border-bottom: 1px solid #7285d3;
     transition: all 0.3s;
-    background: transparent;
+    /* background: transparent; */
+    background-color: white;
     box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
 }
 .container .join .join-con .button .sBtn:hover{
