--- a/src/main/resources/static/css/member/join.css
+++ b/src/main/resources/static/css/member/join.css
@@ -20,6 +20,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    /* background-color: #FFF2F2; */
 }
 /* join제목 */
 .container .join .join-con .join-title{
