--- a/src/main/resources/static/css/member/login.css
+++ b/src/main/resources/static/css/member/login.css
@@ -1,3 +1,162 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
+ /* container */ 
+ .container{
+    width: 100%;
+    height: 1200px; 
+} 
+.container .login{ 
+    width: 100%; 
+    height: 1200px; 
+    display: flex; 
+    justify-content: center; 
+    align-items: flex-start; 
+    box-sizing: border-box; 
+} 
+.container .login .login-con{ 
+    flex-basis: 800px; 
+    box-sizing: border-box; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    text-align: center; 
+    gap: 30px; 
+    /* background-color: #FFF2F2;  */
+} 
+/* title */ 
+.container .login .login-con .title{ 
+    padding: 20px; 
+    gap: 10px; 
+    box-sizing: border-box; 
+    display: flex; 
+    justify-content: center; 
+    /* border-bottom: 2px solid #7285d3a4;  */
+    /* background-color: #7285d3a4; 
+    color: white;  */
+}
+/* login-form */ 
+.container .login .login-con .login-form{ 
+    height: 800px; 
+    padding: 10px; 
+    box-sizing: border-box; 
+    justify-content: center; 
+    align-items: center;
+    /* border: 2px solid #7285d3;  */
+    /* box-shadow: 0px 1px 1px 0px #7285d3a4, inset 0px -2px 4px -1px #7285d3a4;  */
+}
+.container .login .login-con .login-form form{ 
+    width: 700px; 
+    margin: auto; 
+    text-align: center; 
+    align-items: center;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center; 
+    gap: 5px; 
+    box-sizing: border-box; 
+    /* border: 2px solid green;  */
+} 
+/* login-form >ul */
+.container .login .login-con .login-form form>ul{ 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    text-align: center; 
+    align-items: center;
+    /* border: 2px solid yellow;  */
+    /* box-shadow: 0px 1px 1px 0px #FFF2F2, inset 0px -2px 4px -1px #FFF2F2; */ 
+} 
+/* submit제외 li */
+.container .login .login-con .login-form form>ul>li:not(.submit){
+    width: 500px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: start; 
+    padding: 10px;
+}
+/* submit */
+.container .login .login-con .login-form form>ul>li.submit{
+    width: 500px;
+    display: flex;
+    justify-content: center;
+} 
+.container .login .login-con .login-form form>ul>li label{
+    text-align: start;
+    font-size: 18px;
+    padding: 10px;
+} 
+/* button 제외 input */
+.container .login .login-con .login-form form>ul>li input:not(.Btn){
+   /* width: inherit; */
+   height: 40px;
+   font-size: 15px;
+   border-bottom: 2px solid #cccccc;
+   border-top: none;
+   border-left: none;
+   border-right: none;
+   text-align: center;
+}
+/* button input */
+.container .login .login-con .login-form form>ul>li input.Btn{
+    width: 480px;
+    height: 40px;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 10px;
+    border: none;
+    color: white;
+    outline: none;
+    padding: 10px;
+    gap: 10px;
+}
+/* ul>find */
+.container .login .login-con .login-form form>ul .find{
+    width: 500px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+/* ul>find>email */
+.container .login .login-con .login-form form>ul .find .email>li{
+    width: 200px;
+    text-align: center;
+    box-sizing: border-box;
+}
+.container .login .login-con .login-form form>ul .find .email>li a{
+    color: #cccccc;
+    cursor: pointer;
+}
+/* ul>find>pw */
+.container .login .login-con .login-form form>ul .find .pw>li{
+    width: 200px;
+    text-align: center;
+    box-sizing: border-box;
+    border-left: 2px solid black;
+}
+.container .login .login-con .login-form form>ul .find .pw>li a{
+    color: #cccccc;
+    cursor: pointer;
+}
+.container .login .login-con .login-form form>ul .sns-con{
+    width: 500px;
+    height: 40px;
+    gap: 20px;
+    flex-direction: column;
+    justify-content: space-around;
+    /* border: 2px solid blue; */
+}
+.container .login .login-con .login-form form>ul .sns-con>li.sns{
+    gap: 5px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* border: 2px solid gray; */
+}
+.container .login .login-con .login-form form>ul .sns-con>li.sns a img{
+    width: 300px;
+    height: 30px;
+}
