--- a/src/main/resources/static/css/inquiry/update.css
+++ b/src/main/resources/static/css/inquiry/update.css
@@ -117,8 +117,11 @@
     width: 780px;
     height: 20px; 
     padding: 10px;
-    box-shadow: inset 0px -2px 4px -1px #8c9cdb;
-    border: none;
+    /* box-shadow: inset 0px -2px 4px -1px #8c9cdb; */
+    border-bottom: 2px solid #cccccc;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     outline: none;
 }
 .container .update .update-con .update-form form>ul>li:not(.Btn) input.writeInput{
