--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -51,9 +51,9 @@
                         </div>
                         <div class="sns-con">
                             <li class="sns">
-                                <a th:href="@{/oauth2/authorization/google}"><img th:src="@{/images/google.jpg}" alt="google"></a>
-                                <a th:href="@{/oauth2/authorization/naver}"><img th:src="@{/images/naver.jpg}" alt="naver"></a>
-                                <a th:href="@{/oauth2/authorization/kakao}"><img th:src="@{/images/kakao.jpg}" alt="kakao"></a>
+                                <a th:href="@{/oauth2/authorization/google}"><img th:src="@{/images/google.png}" alt="google"></a>
+                                <a th:href="@{/oauth2/authorization/naver}"><img th:src="@{/images/naver.png}" alt="naver"></a>
+                                <a th:href="@{/oauth2/authorization/kakao}"><img th:src="@{/images/kakao.png}" alt="kakao"></a>
                             </li>
                         </div>
                         </ul>
