--- a/src/main/resources/templates/member/tempPassword.html
+++ b/src/main/resources/templates/member/tempPassword.html
@@ -7,7 +7,7 @@
     <script th:src="@{/js/member/tempPassword.js}" defer="defer"></script>
 </head>
 <body>
-<!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <form id="tempPasswordForm" th:action="@{/send-mail/password}" method="post">
     <ul>
         <li>
@@ -23,4 +23,5 @@
 </form>
 <div id="tempPasswordMessage" style="display: none;"></div>
 </body>
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
