--- a/src/main/resources/static/css/member/login.css
+++ b/src/main/resources/static/css/member/login.css
@@ -55,7 +55,6 @@
     justify-content: center; 
     gap: 5px; 
     box-sizing: border-box; 
-    /* border: 2px solid green;  */
 } 
 /* login-form >ul */
 .container .login .login-con .login-form form>ul{ 
@@ -104,11 +103,18 @@
     text-align: center;
     font-size: 18px;
     border-radius: 10px;
+    background: #4b66c79e;
     border: none;
     color: white;
     outline: none;
     padding: 10px;
     gap: 10px;
+    cursor: pointer;
+}
+.container .login .login-con .login-form form>ul>li input.Btn:hover{
+    box-sizing: border-box;
+    background: #4b66c7;
+    box-shadow: 0 10px 10px 0 #cccccc;
 }
 /* ul>find */
 .container .login .login-con .login-form form>ul .find{
@@ -157,6 +163,6 @@
     /* border: 2px solid gray; */
 }
 .container .login .login-con .login-form form>ul .sns-con>li.sns a img{
-    width: 300px;
-    height: 30px;
+    width: 250px;
+    height: 50px;
 }
