--- a/src/main/resources/templates/member/changePassword.html
+++ b/src/main/resources/templates/member/changePassword.html
@@ -7,7 +7,7 @@
     <script th:src="@{/js/member/confirmPw_changePassword.js}" defer="defer"></script>
 </head>
 <body>
-<!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <div class="password-change">
     <h1>비밀번호 변경</h1>
     <form id="changePasswordForm" th:action="@{/member/changePassword}" method="post">
@@ -35,4 +35,5 @@
     </form>
 </div>
 </body>
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
