--- a/src/main/resources/templates/member/confirmPassword.html
+++ b/src/main/resources/templates/member/confirmPassword.html
@@ -7,7 +7,7 @@
     <script th:src="@{/js/member/confirmPw_confirmPassword.js/}" defer="defer"></script>
 </head>
 <body>
-<!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <h1>비밀번호 확인</h1>
 <form th:action="@{/member/confirmPassword}" method="post">
     <ul>
@@ -24,4 +24,5 @@
     <button type="submit" id="changePasswordBtn">비밀번호 변경</button>
 </form>
 </body>
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
