--- a/src/main/resources/templates/semiMember/detail.html
+++ b/src/main/resources/templates/semiMember/detail.html
@@ -7,7 +7,7 @@
   <title>detail</title>
 </head>
 <body>
-<!--<div th:replace="~{fragments/header :: headerFragment}"></div>-->
+<div th:replace="~{fragments/header :: headerFragment}"></div>
 <div class="detail">
   <h1 class="title"><span th:text="${semiMember.semiMemberEmail}" ></span>님 상세정보</h1>
 <!--  아이디 : <span th:text="${member.memberId}"></span> <br>-->
@@ -19,4 +19,5 @@
   <a th:href="@{/semiMember/confirmEmail/{semiMemberId}(semiMemberId=${semiMember.semiMemberId})}">삭제</a>
 </div>
 </body>
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
