--- a/src/main/resources/templates/semiMember/login.html
+++ b/src/main/resources/templates/semiMember/login.html
@@ -16,8 +16,10 @@
     <div class="container">
         <div class="semiLogin">
             <div class="semiLogin-con">
-                 <div class="semiLogin-form">
+                <div class="title">
                     <h1>간편 회원 로그인</h1>
+                </div>
+                 <div class="semiLogin-form">
                     <!-- enctype="multipart/form-data" 뭔지 자세히 알아보기 -->
                     <form th:action="@{/semiMember/login/post}" enctype="multipart/form-data" method="post">
                         <ul>
@@ -29,8 +31,8 @@
                                 <label for="semiMemberPhone">휴대전화</label>
                                 <input type="text" name="semiMemberPhone" id="semiMemberPhone" required="required" placeholder="휴대전화 입력">
                             </li>
-                            <li>
-                                <input type="submit" value="간편 로그인">
+                            <li class="submit">
+                                <input type="submit" value="간편 로그인" class="Btn">
                             </li>
                         </ul>
                     </form>
