--- a/src/main/resources/templates/member/findEmail.html
+++ b/src/main/resources/templates/member/findEmail.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>이메일 찾기</title>
+    <link rel="stylesheet" th:href="@{/css/member/findEmail.css}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/member/findEmail.js}" defer="defer"></script>
 </head>
