--- a/src/main/resources/templates/member/changePassword.html
+++ b/src/main/resources/templates/member/changePassword.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>비밀번호 변경</title>
+    <link rel="stylesheet" th:href="@{/css/member/changePassword.css}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/member/confirmPw_changePassword.js}" defer="defer"></script>
 </head>
