--- a/src/main/resources/templates/semiMember/confirmEmail.html
+++ b/src/main/resources/templates/semiMember/confirmEmail.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>회원정보 삭제 시 이메일 인증</title>
+    <link rel="stylesheet" th:href="@{/css/semiMember/confirmEmail.css}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/member/semiConfirmEmail.js/}" defer="defer"></script>
 </head>
