--- a/src/main/resources/templates/notice/detail.html
+++ b/src/main/resources/templates/notice/detail.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
     <title>공지사항 상세 페이지</title>
     <link rel="stylesheet" th:href="@{/css/notice/detail.css}">
+    <script th:src="@{/js/notice/write.js}" defer="defer"></script>
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
@@ -14,39 +17,42 @@
                 <h1>공지사항</h1>
             </div>
             <div class="board-con">
-                <ul>
-                    <li class="titleLi">
-                        <span th:text = "${noticeDto.notType}" class="type"></span>
-                        <span th:text = "${noticeDto.noticeTitle}" class="title"></span>
-                    </li>
-                    <li>
-                        <span>작성자</span>
-                        <span th:text="${noticeDto.notWriter}"></span>
-                    </li>
-                    <li>
-                        <span>작성날짜</span>
-                        <span th:text="${#temporals.format(noticeDto.CreateTime,'yyyy년 MM월 dd일 hh시 mm분')}"></span>
-                    </li>
-                    <li>
-                        <span>수정날짜</span>
-                        <span th:text="${#temporals.format(noticeDto.UpdateTime,'yyyy년 MM월 dd일 hh시 mm분')}"></span>
-                    </li>
-                    <li>
-                        <span>조회수</span>
-                        <span th:text = "${noticeDto.notHit}"></span>
-                    </li>
-                    <li>
-                        <span class="content"></span>
-                        <span th:text = "${noticeDto.noticeContent}"></span>
-                    </li>
-                    <li>
-                        <a th:href="@{/notice/delete/{id}(id=${noticeDto.notId})}">삭제하기</a>
-                        <a th:href="@{/notice/update/{id}(id=${noticeDto.notId})}">수정하기</a>
-                    </li>
-                    <li>
-                        <a th:href="@{/notice/list?page=0&select=&search=}" class="list">LIST</a>
-                    </li>
-                </ul>
+                <div class="top">
+                    <div class="top-title">
+                        <span th:text = "${noticeDto.notType}" class="typeSpan"></span>
+                        <span th:text = "${noticeDto.noticeTitle}" class="titleSpan"></span>
+                    </div>
+                    <div class="top-bottom">
+                        <div class="left">
+                            <span th:text="${#temporals.format(noticeDto.CreateTime,'yyyy년 MM월 dd일 hh:mm')}"></span>
+                            <span th:text="${#temporals.format(noticeDto.UpdateTime,'yyyy년 MM월 dd일 hh:mm')}"></span>    
+                        </div>
+                        <div class="right">
+                            <span th:text="${noticeDto.notWriter}"></span>
+                            <span th:text = "${noticeDto.notHit}"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="middle">
+                    <textarea th:text="${noticeDto.noticeContent}" th:value="${noticeDto.noticeContent}" name="noticeContent" id="contentText" class="writeInput" disabled></textarea>
+                </div>
+                <div class="bottom">
+                    <div class="bottom-top">
+                        <div class="delete">
+                            <!-- <th:block sec:authorize="hasAnyRole('ADMIN')"> -->
+                            <a th:href="@{/notice/delete/{id}(id=${noticeDto.notId})}">삭제하기</a>
+                        </div>
+                        <div class="list">
+                            <a th:href="@{/notice/list?page=0&select=&search=}" class="list">LIST</a>
+                        </div>
+                    </div>
+                    <div class="bottom-bottom">
+                        <div class="update">
+                            <!-- <th:block sec:authorize="hasAnyRole('ADMIN')"> -->
+                            <a th:href="@{/notice/update/{id}(id=${noticeDto.notId})}">수정하기</a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!--댓글-->
             <div class="reply-con">
